Pass -Xmx512M and allow illegal access to make sure plugins don't break